# ai-router

./: .env.example  .env.make  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  Makefile  PRD_TASK_MASTER.md  README.md  TASK_COMPLETED.md  TESTING.md  app.py  compose_ps.txt  dev_day_scenarios.py  docker-compose.prod.yml  docker-compose.yml  k6_models.json  models.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  router_config.yaml  router_contract.py  router_graph.py  router_policy.yaml  run_tests.sh  showtime.jsonl
.continue/: config.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.reports/: _idempotency_keys.txt  _pkgs.txt  deps_context7_2025-10-22.json  deps_pip_audit.json  deps_pip_audit.txt  deps_versions.tsv  deps_versions_2025-10-24.csv  pip_audit_2025-10-24.json
.taskmaster/: state.json
app/: _head_compat.py  main.py
automations/: examples.yaml
config/: .env.def  .env.example  .env.local.example  router_config.yaml  router_policy.yaml
docs/: AGENTS.md  ARCHITECTURE.md  BUG_REPORT.md  CODEX_GUARDRAILS.md  CONTINUE.md  DEPLOYMENT.md  EVALS.md  FRONTEND_INTEGRATION.md  GETTING_STARTED.md  GOVERNANCE.md  IMPROVEMENTS.md  INTEGRATION.md  INTEGRATION_GUIDE.md  LOCAL_USAGE.md  PRD_TASK_MASTER.md  ROUTING_DESIGN.md  ROUTING_POLICY.md  SECRETS_STANDARD.md  TESTING.md  ai-stack.env.example  guia_de_test.md  guide.md  openai_auth.md
graph/: cost_guard.py  router.py
k6_out/: k6_models.json  k6_models_10m.json  k6_models_run1.json  k6_models_run2.json  k6_models_run3.json
logs/: metrics.jsonl
providers/: ollama_client.py  openai_client.py
(+118 files in other folders)
